Closed Bug 1128108 Opened 10 years ago Closed 10 years ago

Assertion failure: owner->isEnabled(), at gc/StoreBuffer.cpp

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 --- fixed

People

(Reporter: gkw, Assigned: terrence)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:])

Attachments

(2 files)

verifypostbarriers(); asserts js debug shell on m-c changeset d7e156a7a0a6 with --fuzzing-safe --no-threads --no-ion --no-ggc at Assertion failure: owner->isEnabled(), at gc/StoreBuffer.cpp. Debug configure options: CC="clang -Qunused-arguments" CXX="clang++ -Qunused-arguments" AR=ar AUTOCONF=/usr/local/Cellar/autoconf213/2.13/bin/autoconf213 sh /Users/skywalker/trees/mozilla-central/js/src/configure --target=x86_64-apple-darwin12.5.0 --enable-debug --enable-optimize --enable-nspr-build --enable-more-deterministic --with-ccache --enable-gczeal --enable-debug-symbols --disable-tests (Guessing that this has been happening since bug 706885, which landed --no-ggc, so has been around for quite a while.) Terrence, any idea what's going on here? (fwiw I only just recently implemented --no-ggc support)
Flags: needinfo?(terrence)
Whiteboard: [jsbugmon:update] → [jsbugmon:]
JSBugMon: Cannot process bug: Unable to automatically reproduce, please track manually.
I think we shouldn't allow barrier verification to start when ggc is already disabled.
Assignee: nobody → terrence
Status: NEW → ASSIGNED
Flags: needinfo?(terrence)
Attachment #8558071 - Flags: review?(jcoppeard)
Comment on attachment 8558071 [details] [diff] [review] noggc-verifypostbarriers-v0.diff Review of attachment 8558071 [details] [diff] [review]: ----------------------------------------------------------------- That makes sense.
Attachment #8558071 - Flags: review?(jcoppeard) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: