Bug 1128108 - Do not start post-barrier verification when GGC is disabled; r=jonco